[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chord-sensitivity"
version = "0.1.0"
description = "A package to compute sensitivity of CHORD to Radio Recombination Lines"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "DuncanStstevens", email = "duncan@example.com"}
]
keywords = ["astronomy", "radio", "CHORD", "sensitivity", "recombination lines"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/DuncanCSt/CHORD_Sensitivity"
Repository = "https://github.com/DuncanCSt/CHORD_Sensitivity"
Issues = "https://github.com/DuncanCSt/CHORD_Sensitivity/issues"

[tool.setuptools]
packages = ["chord_sensitivity"]

[tool.setuptools.package-data]
chord_sensitivity = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
